initial styling + images.

--- a/index.html
+++ b/index.html
@@ -4,16 +4,27 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Arizonia&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="main.css">
 	<title>Pokemon Search Engine</title>
 </head>
 <body>
-	<header>
-		<img src="https://fontmeme.com/permalink/221025/ad223289693aa063e68eda80ee05d3a9.png" alt="pokemon-font" border="0">
-	</header>
-	<section class="search-bar">
 
+	<header>
+		<img src="./assets/img/pokemon-title.png" alt="pokemon-font" border="0">
+	</header>
+
+	<section id="search-bar">
+		<input type="search" name="poke-search" id="poke-search">
+		<img src="./assets/img/pokeball.png" alt="poke-ball" id="poke-ball-img">
 	</section>
+
+	<main id="main-grid">
+		
+	</main>
+
 	<script src="script.js"></script>
 </body>
 </html>
