More styling for search bar.

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 		<img src="./assets/img/pokemon-title.png" alt="pokemon-font" border="0">
 	</header>
 
-	<section id="search-bar">
+	<section id="search-container">
 		<input type="search" name="poke-search" id="poke-search">
 		<img src="./assets/img/pokeball.png" alt="poke-ball" id="poke-ball-img">
 	</section>
 
 	<main id="main-grid">
-		
+
 	</main>
 
 	<script src="script.js"></script>
