--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</header>
 
 	<section id="search-container">
-		<input type="search" name="poke-search" id="poke-search">
+		<input type="search" name="poke-search" id="poke-search" placeholder="Pokemon name/id">
 		<img src="./assets/img/pokeball.png" alt="poke-ball" id="poke-ball-img">
 	</section>
 
