Pokeball styling + slight change to animation.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
 	<section id="search-container">
 		<input type="search" name="poke-search" id="poke-search" placeholder="Pokemon name/id">
-		<img src="./assets/img/pokeball.png" alt="poke-ball" id="poke-ball-img">
+		<div class="poke-ball-container">
+			<img src="./assets/img/pokeball.png" alt="poke-ball" id="poke-ball-img">
+		</div>
 	</section>
 
 	<main id="main-grid">
